Updated resume, sorta fixed overlapping waterfall video and text, changed highlight color to grey

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -35,7 +35,7 @@ audio,
 canvas,
 progress,
 video {
-  display: inline-block;
+  display: block;
   vertical-align: baseline;
 }
 
